--- a/main.html
+++ b/main.html
@@ -8,6 +8,26 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1 style="text-align:center">My Playlist</h1>
+	<ul>
+		<li><a href="#song" target="_blank">song 1</a</li>
+		<li><a href="#song" target="_blank">song 2</a</li>
+		<li><a href="#song" target="_blank">song 3</a</li>
+		<li><a href="#song" target="_blank">song 4</a</li>
+		<li><a href="#song" target="_blank">song 5</a</li>
+	</ul>
+	<h2 style="text-align:center">Now Playing...</h2>
+	<div class="player_one">
+		<video controls>
+			<source src="https://www.youtube.com/watch?v=PtAZKZYRrKM" type="video/mp4" >
+		</video>
+	</div>
+	<h2 style="text-align:center">MP3 songs</h2>
+	<div class="player_two">
+		<audio controls>
+			<source src="https://www.pagalworld.com.se/maan-meri-jaan-mp3-song-download.html" type="audio/mp3" >
+		</audio>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
